@@ -71,12 +71,22 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
     implementation project(':tqdatabase')
 
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.3.3'
-    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
-    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.9.0'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
     testImplementation group: 'com.google.inject', name: 'guice', version: '4.2.3'
+}
+
+test {
+    jvmArgs '--add-opens','javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
+            '--add-opens','java.base/java.lang=ALL-UNNAMED',
+            '--add-opens','java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens','java.base/java.io=ALL-UNNAMED',
+            '--add-opens','java.base/java.nio=ALL-UNNAMED',
+            '--add-opens','java.base/java.nio.file=ALL-UNNAMED',
+            '--add-opens','java.logging/java.util.logging=ALL-UNNAMED'
 }
 
 if (OS.isWindows()) {
